--- a/src/less/index.less
+++ b/src/less/index.less
@@ -92,7 +92,9 @@
         padding-left: 30px;
     }
 }
-
+.modal .search-input {
+    
+}
 .language-content {
     position: absolute;
     top: 0px;
