--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -1,7 +1,7 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
 <div ui-content-for="title">
     <span class="search-input">
-        <input type="text" class="form-control full-width" placeholder="请输入关键字">
+        <input type="text" class="form-control full-width" ng-focus="show_search_panel()" placeholder="请输入关键字">
     </span>
 </div>
 <div ui-content-for="navbarAction">
@@ -48,5 +48,29 @@
         <div ng-include="'location.html'" ng-if="filter.name == 'location'"></div>
         <div ng-include="'price.html'" ng-if="filter.name == 'price'"></div>
         <div ng-include="'category.html'" ng-if="filter.name == 'category'"></div>
+    </div>
+</div>
+<div ui-content-for="modals">
+    <div class="modal modal-overlay" ui-if="search_translators_panel" ui-state='search_translators_panel'>
+        <!-- <div class="modal-backdrop in"></div> -->
+        <form name="searchForm" ng-submit="ajaxForm()" class="modal-dialog" style="margin:0">
+            <div class="navbar navbar-app">
+                <div class="navbar-brand navbar-brand-center">
+                    <span class="search-input">
+                        <input type="text" class="form-control full-width" ng-model="input.search" placeholder="请输入关键字">
+                    </span>
+                </div>
+                <div class="btn-group pull-left">
+                    <div class="btn sidebar-toggle" ui-turn-off="search_translators_panel">
+                        <i class="fa fa-chevron-left"></i>
+                    </div>
+                </div>
+                <div class="btn-group pull-right">
+                    <a ng-click="search()" class="btn">
+                        <i class="fa fa-search text-large"></i>
+                    </a>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
