--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">任务清单</div>
+<div ui-content-for="title">{{"Task List" | translate}}</div>
 <div ui-content-for="navbarAction">
     <a ng-href="#/setting" class="btn sidebar-toggle" ng-if="user.user_id">
         <i class="fa fa-cog text-large"></i>
