--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -4,32 +4,32 @@
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
         <div class="section large" ng-click="show('signin')">
-            <a class="btn btn-warning block full-width">已有账号，马上登录</a>
+            <a class="btn btn-warning block full-width">{{"Existing User, Login" | translate}}</a>
         </div>
         <div class="section large" ng-click="show('signup')">
-            <a class="btn btn-warning block full-width bg-white text-primary">通过手机号注册</a>
+            <a class="btn btn-warning block full-width bg-white text-primary">{{"Register with Mobile No." | translate}}</a>
         </div>
         <div class="section large" ng-click="show('signup_email')">
-            <a class="btn btn-warning block full-width bg-white text-primary">通过邮箱注册</a>
+            <a class="btn btn-warning block full-width bg-white text-primary">{{"Register with Email" | translate}}</a>
         </div>
         <div class="section large text-right">
-            <a class="text-gray" ng-click="show('forget')">忘记密码</a>
+            <a class="text-gray" ng-click="show('forget')">{{"Forgot Password" | translate}}</a>
         </div>
         <div class="section text-center" style="margin:50px auto 20px">
-            --------或通过以下方式登录--------
+            --------{{"Or Login with Other Accounts" | translate}}--------
         </div>
         <div class="btn-group justified">
             <a class="btn">
                 <i class="kk kk-50 kk-weibo"></i>
-                <span class="block text-gray">微博登录</span>
+                <span class="block text-gray">{{"Weibo" | translate}}</span>
             </a>
             <a class="btn">
                 <i class="kk kk-50 kk-weixin"></i>
-                <span class="block text-gray">微信登录</span>
+                <span class="block text-gray">{{"WeChat" | translate}}</span>
             </a>
             <a class="btn">
                 <i class="kk kk-50 kk-facebook"></i>
-                <span class="block text-gray">Facebook</span>
+                <span class="block text-gray">{{"Facebook" | translate}}</span>
             </a>
         </div>
     </div>
@@ -43,16 +43,16 @@
         </div>
         <form ng-submit="ajaxForm('signin')" name="signinForm">
             <div class="kk-input-group flat">
-                <input type="text" name="username" class="form-control" placeholder="请输入手机号码/邮箱" ng-model="input.username" required>
+                <input type="text" name="username" class="form-control" placeholder="{{'Enter Your Mobile No. or Email' | translate}}" ng-model="input.username" required>
                 <!-- <span class="tip text-warning" ng-show="signinForm.username.$invalid && signinForm.username.$dirty">必填,手机或邮箱</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required />
+                <input type="password" name="password" class="form-control" placeholder="{{'Enter Your Password' | translate}}" ng-model="input.password" required />
                 <!-- <span class="tip text-warning" ng-show="signinForm.password.$invalid && signinForm.password.$dirty">必填,密码至少8位</span> -->
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signinForm.$invalid">马上登录</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signinForm.$invalid">{{"Login" | translate}}</button>
             </div>
         </form>
     </div>
@@ -65,30 +65,30 @@
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
         <div class="section large">
-            <div class="pull-left">国家和地区</div>
+            <div class="pull-left">{{"Country or Region Code" | translate}}</div>
             <div class="pull-right text-primary">中国</div>
         </div>
         <form ng-submit="ajaxForm('signup_by_tel')" name="signupForm">
             <div class="kk-input-group flat has-addon">
                 <span class="addon btn">+86</span>
-                <input type="text" name="telephone" class="form-control" placeholder="请输入手机号码" ng-model="input.telephone" required ng-pattern="/(^(13\d|14[57]|15[^4,\D]|17[678]|18\d)\d{8}|170[059]\d{7})$/">
+                <input type="text" name="telephone" class="form-control" placeholder="{{'Enter Mobile No.' | translate}}" ng-model="input.telephone" required ng-pattern="/(^(13\d|14[57]|15[^4,\D]|17[678]|18\d)\d{8}|170[059]\d{7})$/">
                 <!-- <span class="tip text-warning" ng-show="signupForm.telephone.$invalid && signupForm.telephone.$dirty">必填,手机号为11位</span> -->
             </div>
             <div class="kk-input-group flat">
                 <button type="button" class="btn btn-warning btn-sms" ng-click="getSmscode()" ng-disabled="callbackTimer.counting || signupForm.telephone.$invalid" ng-if="sidebar.current=='signup'">
                     <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
-                    获取验证码
+                    {{"Get Verification Code" | translate}}
                 </button>
-                <input type="text" name="sms_code" class="form-control" placeholder="请输入验证码" ng-model="input.sms_code" required>
+                <input type="text" name="sms_code" class="form-control" placeholder="{{'Enter Verification Code' | translate}}" ng-model="input.sms_code" required>
                 <!-- <span class="tip text-warning" ng-show="signupForm.sms_code.$invalid && signupForm.sms_code.$dirty">必填，验证码为6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required>
+                <input type="password" name="password" class="form-control" placeholder="{{'Set Password: at Least 6 Characters' | translate}}" ng-model="input.password" required>
                 <!-- <span class="tip text-warning" ng-show="signupForm.password.$invalid && signupForm.password.$dirty">必填,密码至少8位</span> -->
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupForm.$invalid">注册</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupForm.$invalid">{{"Agree and Register" | translate}}</button>
             </div>
         </form>
     </div>
@@ -108,18 +108,18 @@
             <div class="kk-input-group flat">
                 <button type="button" class="btn btn-warning btn-sms" ng-click="getEmailcode()" ng-disabled="callbackTimer.counting || signupEmailForm.email.$invalid" ng-if="sidebar.current=='signup_email'">
                     <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
-                    获取验证码
+                    {{"Get Verification Code" | translate}}
                 </button>
                 <input type="text" name="email_code" class="form-control" placeholder="请输入验证码" ng-model="input.email_code" required>
                 <!-- <span class="tip text-warning" ng-show="signupEmailForm.email_code.$invalid && signupEmailForm.email_code.$dirty">必填，验证码为6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required>
+                <input type="password" name="password" class="form-control" placeholder="{{'Set Password: at Least 6 Characters' | translate}}" ng-model="input.password" required>
                 <!-- <span class="tip text-warning" ng-show="signupEmailForm.password.$invalid && signupEmailForm.password.$dirty">必填,密码至少8位</span> -->
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupEmailForm.$invalid">注册</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupEmailForm.$invalid">{{"Agree and Register" | translate}}</button>
             </div>
         </form>
     </div>
@@ -139,13 +139,13 @@
             <div class="kk-input-group flat">
                 <button type="button" class="btn btn-warning btn-sms" ng-click="getVerifycode()" ng-disabled="callbackTimer.counting || forgetForm.tel_email.$invalid" ng-if="sidebar.current=='forget'">
                     <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
-                    获取验证码
+                    {{"Get Verification Code" | translate}}
                 </button>
                 <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
                 <!-- <span class="tip text-warning" ng-show="forgetForm.verifycode.$invalid && forgetForm.verifycode.$dirty">必填,验证码6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="重设密码，至少8位" ng-model="input.password" required>
+                <input type="password" name="password" class="form-control" placeholder="{{'Set Password: at Least 6 Characters' | translate}}" ng-model="input.password" required>
                 <!-- <span class="tip text-warning" ng-show="forgetForm.password.$invalid && forgetForm.password.$dirty">必填,密码至少8位</span> -->
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
@@ -168,27 +168,27 @@
         <div class="list-group" ui-turn-off='uiSidebarLeft'>
             <a class="list-group-item" ng-click="to('release_task')">
                 <i class="kk kk-icon kk-sidebar-1 pull-left"></i>
-                <span class="list-group-item-text">发布任务</span>
+                <span class="list-group-item-text">{{"Create Task" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <a class="list-group-item" ng-click="to('tasks')">
                 <i class="kk kk-icon kk-sidebar-2 pull-left"></i>
-                <span class="list-group-item-text">任务清单</span>
+                <span class="list-group-item-text">{{"Task List" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <a class="list-group-item" ng-click="to('me')">
                 <i class="kk kk-icon kk-sidebar-3 pull-left"></i>
-                <span class="list-group-item-text">成为翻译</span>
+                <span class="list-group-item-text">{{"Rent Your Talent" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <a class="list-group-item" ng-click="to('favorite')">
                 <i class="kk kk-icon kk-sidebar-4 pull-left"></i>
-                <span class="list-group-item-text">我的收藏</span>
+                <span class="list-group-item-text">{{"My Followings" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <a class="list-group-item" ng-click="to('wallet')">
                 <i class="kk kk-icon kk-sidebar-5 pull-left"></i>
-                <span class="list-group-item-text">我的钱包</span>
+                <span class="list-group-item-text">{{"My Wallet" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <!-- <a class="list-group-item" ng-click="to('messages')">
@@ -204,15 +204,15 @@
             <div class="btn-group justified">
                 <a class="btn" ng-href="{{sidebar.share.sina}}">
                     <i class="kk kk-50 kk-weibo"></i>
-                    <span class="block text-gray">微博</span>
+                    <span class="block text-gray">{{"Weibo" | translate}}</span>
                 </a>
                 <a class="btn" ng-click="share_weixin()">
                     <i class="kk kk-50 kk-weixin"></i>
-                    <span class="block text-gray">微信</span>
+                    <span class="block text-gray">{{"WeChat" | translate}}</span>
                 </a>
                 <a class="btn" ng-href="{{sidebar.share.facebook}}">
                     <i class="kk kk-50 kk-facebook"></i>
-                    <span class="block text-gray">Facebook</span>
+                    <span class="block text-gray">{{"Facebook" | translate}}</span>
                 </a>
             </div>
         </div>
