--- a/src/templates/ad.html
+++ b/src/templates/ad.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">广告业务</div>
+<div ui-content-for="title">{{"Ads" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
 	<span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
