--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -27,7 +27,7 @@
                     </select>
                 </div>
                 <div class="text-right section large bg-transparent" style="margin-top:150px">
-                    <button type="button" class="btn btn-success" ng-disabled="!(choosen_language.to && choosen_language.from)" ui-set="{step:2}">下一步</button>
+                    <button type="button" class="btn btn-success" ng-disabled="!(choosen_language.to && choosen_language.from)" ui-set="{step:2}">{{"Next" | translate}}</button>
                 </div>
             </div>
             <!-- step 2 -->
@@ -162,8 +162,8 @@
                     </div>
                 </div>
                 <div class="section large bg-transparent">
-                    <button type="button" class="btn btn-default pull-left" ui-set="{step:1}">上一步</button>
-                    <button type="button" class="btn btn-success pull-right" ng-disabled="releaseForm.$invalid || choosen.city.name ==''" ng-click="next({step:'3'})">下一步</button>
+                    <button type="button" class="btn btn-default pull-left" ui-set="{step:1}">{{"Previous" | translate}}</button>
+                    <button type="button" class="btn btn-success pull-right" ng-disabled="releaseForm.$invalid || choosen.city.name ==''" ng-click="next({step:'3'})">{{"Next" | translate}}</button>
                 </div>
             </div>
             <!-- step 3 -->
@@ -262,8 +262,8 @@
                     </div>
                 </div>
                 <div class="section large bg-transparent">
-                    <button type="button" class="btn btn-default pull-left" ui-set="{step:2}">上一步</button>
-                    <button type="submit" class="btn btn-warning pull-right">确认提交</button>
+                    <button type="button" class="btn btn-default pull-left" ui-set="{step:2}">{{"Previous" | translate}}</button>
+                    <button type="submit" class="btn btn-warning pull-right">{{"Confirm" | translate}}</button>
                 </div>
             </div>
         </form>
