--- a/src/templates/task.html
+++ b/src/templates/task.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">任务详情</div>
+<div ui-content-for="title">{{"Task Details" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
 	<span class="btn" ng-click="back()">
@@ -23,7 +23,7 @@
             <div class="section" style="padding-bottom:0">
 				<div class="semi-auto semi-left-80">
 					<div class="semi-fixed-left text-center">
-						语言：
+						{{"Language" | translate}}：
 					</div>
 					<div style="padding-bottom:8px;">
 						{{task.language}}
@@ -46,7 +46,7 @@
             <div class="section" style="padding-bottom:0">
 				<div class="semi-auto semi-left-80">
 					<div class="semi-fixed-left text-center">
-						类型：
+						{{"Type" | translate}}：
 					</div>
 					<div style="padding-bottom:8px;">
 						{{task.type}} 
@@ -57,7 +57,7 @@
             <div class="section" style="padding-bottom:0">
 				<div class="semi-auto semi-left-80">
 					<div class="semi-fixed-left text-center">
-						价格：
+						{{"Price" | translate}}：
 					</div>
 					<div style="padding-bottom:8px;">
 						{{task.currency_type +" "+ task.price_for_day}}/天 (约{{task.to_price_for_day}}/天)
@@ -79,7 +79,7 @@
            	<div class="section" style="padding-bottom:0">
 				<div class="semi-auto semi-left-80">
 					<div class="semi-fixed-left text-center">
-						地点：
+						{{"Place" | translate}}：
 					</div>
 					<div style="padding-bottom:8px;">
 						{{task.address}}
@@ -90,7 +90,7 @@
             <div class="section" style="padding-bottom:0">
 				<div class="semi-auto semi-left-80">
 					<div class="semi-fixed-left text-center">
-						任务详情：
+						{{"Task Details" | translate}}：
 					</div>
 					<div style="padding-bottom:8px;">
 						{{task.description}}
@@ -102,7 +102,7 @@
 	<div class="scrollable-footer">
 		<div class="kk-line kk-horizon bg-gray-lighter"></div>
 		<div class="section text-right">
-			<a class="btn btn-success" ng-click="apply()">发送申请</a>
+			<a class="btn btn-success" ng-click="apply()">{{"Apply" | translate}}</a>
 		</div>
 	</div>
 </div>
