--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -14,9 +14,9 @@
     <div class="scrollable-header">
         <div class="btn-group justified">
             <label class="btn rectangle bg-gray-lighter" ng-class="{'text-primary':task_tab.name =='release','bg-white':task_tab.name  == 'release'}">
-                <input type="radio" class="hide" ng-model="task_tab.name " value="release">发出任务</label>
+                <input type="radio" class="hide" ng-model="task_tab.name " value="release">{{"Task Created" | translate}}</label>
             <label class="btn rectangle bg-gray-lighter" ng-class="{'text-primary':task_tab.name  =='accept','bg-white':task_tab.name  =='accept'}">
-                <input type="radio" class="hide" ng-model="task_tab.name " value="accept">接受任务</label>
+                <input type="radio" class="hide" ng-model="task_tab.name " value="accept">{{"Task Received" | translate}}</label>
         </div>
     </div>
     <div class="scrollable-content">
@@ -31,13 +31,13 @@
                         <span class="">已下线</span>
                     </div>
                     <div class="semi-fixed-right semi-wide-80 text-right" ng-if="task.task_status == 1">
-                        <span class="">等待确认</span>
+                        <span class="">{{"To be Confirmed" | translate}}</span>
                     </div>
                     <div class="semi-fixed-right semi-wide-80 text-right text-success" ng-if="task.task_status == 2">
-                        <span class="">任务确认</span>
+                        <span class="">{{"Confirmed" | translate}}</span>
                     </div>
                     <div class="semi-fixed-right semi-wide-80 text-right" ng-if="task.task_status == 3 && task.is_comment == '0'">
-                        <a ng-href="#/{{task.task_id}}/comment" class="btn btn-danger section section-condensed bg-transparent text-danger">待评价</a>
+                        <a ng-href="#/{{task.task_id}}/comment" class="btn btn-danger section section-condensed bg-transparent text-danger">{{"To be Rated" | translate}}</a>
                     </div>
                     <div class="semi-fixed-right semi-wide-80 text-right" ng-if="task.is_comment == '1'">
                         <span class="">已评价</span>
