--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">悠译</div>
+<div ui-content-for="title">{{"UE" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()">
@@ -30,31 +30,31 @@
                 <div class="list-group-item">
                     <div class="btn-group justified">
                         <span>
-                            <span class="block text-small">服务态度</span>
+                            <span class="block text-small">{{"Service Attitude" | translate}}</span>
                         <span class="block text-primary">{{translator.service_score}}</span>
                         </span>
                         <span class="text-center">
-                            <span class="block text-small">专业水平</span>
+                            <span class="block text-small">{{"Proficiency" | translate}}</span>
                         <span class="block text-primary">{{translator.profession_score}}</span>
                         </span>
                         <span class="text-right">
-                            <span class="block text-small">语言能力</span>
+                            <span class="block text-small">{{"Language Skill" | translate}}</span>
                         <span class="block text-primary">{{translator.language_score}}</span>
                         </span>
                     </div>
                 </div>
                 <div class="list-group-item">
                     <div class="clearfix">
-                        <p class="pull-left text-small">任务完成数量</p>
+                        <p class="pull-left text-small">{{"Number of Tasks Completed" | translate}}</p>
                         <p class="pull-right text-primary">{{translator.done_task_count}}</p>
                     </div>
                     <div class="clearfix">
-                        <p class="pull-left text-small">任务完成率</p>
+                        <p class="pull-left text-small">{{"Completion Rate" | translate}}</p>
                         <p class="pull-right text-primary">{{translator.done_task_rate}}</p>
                     </div>
                 </div>
                 <div class="list-group-item">
-                    <span class="text-small">个人认证： {{authens.length}}项</span>
+                    <span class="text-small">{{"Personal Identity" | translate}}： {{authens.length}}项</span>
                     <div class="btn-group justified text-left">
                         <span ng-if="translator.identity_front !=''"><i class="kk kk-40 kk-authen-1"></i></span>
                         <span ng-if="translator.language_identity !=''"><i class="kk kk-40 kk-authen-2" ></i></span>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="list-group-item clearfix">
                     <div class="pull-left text-small">
-                        擅长语言
+                        {{"Language" | translate}}
                     </div>
                     <div class="pull-right text-right">
                         <p ng-repeat="language in translator.user_languages_list"><span class="text-small">{{language.from_language+"-"+language.to_language}}</span> <span>{{language.level}}</span></p>
@@ -85,10 +85,10 @@
                 <div class="list-group-item clearfix">
                     <div class="clearfix">
                         <div class="pull-left text-small">
-                            翻译类型
+                            {{"Type" | translate}}
                         </div>
                         <div class="pull-right text-right">
-                            <p class="text-small">翻译类型</p>
+                            <p class="text-small">{{"Type" | translate}}</p>
                         </div>
                     </div>
                     <div class="text-right">
@@ -101,10 +101,10 @@
                 <div class="list-group-item">
                     <div class="clearfix">
                         <div class="pull-left text-small">
-                            翻译经验
+                            {{"Experience" | translate}}
                         </div>
                         <div class="pull-right text-right">
-                            <p class="text-small">经验介绍</p>
+                            <p class="text-small">{{"Experience" | translate}}</p>
                         </div>
                     </div>
                     <div class="text-right" ng-repeat="experience in translator.experiences">
@@ -114,10 +114,10 @@
                 <div class="list-group-item">
                     <div class="clearfix">
                         <div class="pull-left text-small">
-                            个人简介
+                            {{"Profile" | translate}}
                         </div>
                         <div class="pull-right text-right">
-                            <p class="text-small">个人简介</p>
+                            <p class="text-small">{{"Profile" | translate}}</p>
                         </div>
                     </div>
                     <div class="text-right">
@@ -159,16 +159,16 @@
                 将我分享给朋友
             </span>
             <a ng-href="#/apply_flow" class="btn btn-danger rectangle" ng-if="translator.apply_status ==0">
-                发送申请
+                {{"Apply" | translate}}
             </a>
             <a class="btn btn-danger rectangle" ng-if="translator.apply_status ==1">
                 已经申请
             </a>
             <span class="btn bg-gray text-white rectangle" ng-click="like()" ng-if="translator.is_collection == 0">
-                收藏此人
+                {{"Follow" | translate}}
             </span>
             <span class="btn btn-primary text-white rectangle" ng-click="unlike()" ng-if="translator.is_collection == 1">
-                取消收藏
+                {{"Followed" | translate}}
             </span>
         </div>
     </div>
