--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -19,13 +19,13 @@
         <div class="section section-condensed" id="filter">
             <div class="btn-group justified">
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="language">语言<i class="kk kk-icon" ng-class="{'kk-check':choosen.languages.length == 2}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="language">{{"Language" | translate}}<i class="kk kk-icon" ng-class="{'kk-check':choosen.languages.length == 2}"></i></label>
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="location">地点<i class="kk kk-icon" ng-class="{'kk-check':choosen.city.name != ''}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="location">{{"Place" | translate}}<i class="kk kk-icon" ng-class="{'kk-check':choosen.city.name != ''}"></i></label>
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="price">价格<i class="kk kk-icon" ng-class="{'kk-check':choosen.price.range != ''}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="price">{{"Price" | translate}}<i class="kk kk-icon" ng-class="{'kk-check':choosen.price.range != ''}"></i></label>
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">类型<i class="kk kk-icon" ng-class="{'kk-check':choosen.category.name != ''}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">{{"Type" | translate}}<i class="kk kk-icon" ng-class="{'kk-check':choosen.category.name != ''}"></i></label>
             </div>
         </div>
     </div>
